--- a/Codigo/Relatorio.tex
+++ b/Codigo/Relatorio.tex
@@ -9,6 +9,115 @@
     \\
     Victor Wichmann Raposo 9298020
 }
+\date{Maio 2016}
+
+\begin{document}
+
+\maketitle
+\section{Introdução}
+O documento visa descrever o projeto do jogo Spacewar.
+Allegro ideia e como baixar e como rodar 
+Modelo ideia
+\section{Classes}
+Fizemos o uso de orientação a objetos usando structs. Definimos algumas classes que serão explicadas abaixo
+cuja documentação de cada função está especificada no cabeçalho das respectiva classe.
+
+\subsection{Body}
+O Body funciona como base para outros corpos. Ele possuí propriedades básicas que todo corpo (nave, planeta, projétil) possui.
+Os atributos implementados nele são: raio (double), peso (double), ângulo em radianos (double), posição (Vector), força (Vector) e velocidade (Vector).
+
+\subsection{Projectile}
+Essa é a representação dos projéteis. Os atributos que eles possuem são: corpo (Body) e duração (double).
+Como não há orientação a objetos em C e portanto não há hierarquia, inserimos o corpo como atributo da struct.
+
+\subsection{Ship}
+Essa é a representação das naves. Os atributos que eles possuem são: corpo (Body) e nome (array de chars).
+Como não há orientação a objetos em C e portanto não há hierarquia, inserimos o corpo como atributo da struct.
+
+\subsection{Vector}
+Essa é a representação de um vetor no $V^2$. Os atributos que eles possuem são: x (double) e y (double).
+
+\section{MVC}
+Utilizamos a arquitetura de software Model-View-Controller para desenvolvimento do projeto por facilitar o desenvolvimento em módulos.
+\subsection{Modelos}
+Procuramos implementar uma orientação a objetos no nosso projeto pois acreditamos que fosse simplificar o desenvolvimento e manutenção do
+código. \\
+ O objeto Vector que criamos simplificou muito o manuseio e cálculo de velocidades, acelerações e posições. \\
+O arquivo "simulation.c" é responsável por aplicar a modelagem física, computando as forças e movimentos.
+\subsubsection{Gravidade}
+A cada interação zeramos os vetores de força de todos os corpos e depois aplicamos as forças gravitacionais entre:
+\begin{itemize}
+\item Planeta e nave 1;
+\item  Planeta e nave 2;
+\item Nave 1 e nave 2;
+\end{itemize}
+Propositalmente, não computamos a gravidade nos projeteis pois queremos que seu movimento seja retilínio.
+
+\subsubsection{Movimento}
+Assumimos que, para o dt dado, o movimento dos corpos é um movimento uniformemente variado. A partir disso calculamos o espaço e a velocidade dos corpos em relação ao eixo x e ao eixo y;
+
+\subsubsection{Toróide}
+A implementação do toróide não interfere na modelagem. // TO DO
+
+\subsection{Visão}
+O framework que usamos para o jogo foi o Allegro que utiliza por trás o
+OpenGL. Escolhemos essa engine por alguns motivos: \\
+\begin{itemize}
+    \item Ainda é utilizado nos dias de hoje pela comunidade, o que implica em mais suporte;
+    \item Há bastante material didático na internet;
+    \item Usa OpenGL;
+\end{itemize}
+A parte do código que trata a apresentação na tela foi desenvolvida no arquivo "draw.c", visando a modularização.
+
+\subsection{Allegro}
+\subsubsection{Instalação}
+Para instalar o Allegro, siga as instruções da página oficial: \\ \\
+    $https://wiki.allegro.cc/index.php?title=Getting_Started\#Installing\_Allegro$
+
+\subsubsection{Memory Leak}
+Detectamos que o Allegro apresenta um memory leak constante e pequeno, natural da sua implementação e que não interfere na execução do programa.
+
+\subsubsection{Funcionamento}
+// TO DO
+
+
+\subsection{Controladores}
+Por ora, não fizemos nenhum trabalho que envolva controladores.
+
+\section{Makefile}
+Criamos um Makefile para o projeto tal que apenas os arquivos que sofreram alguma mudança sejam recompilados. Além disso, fizemos uma especificação para deletar os arquivos .o e outra para executar o programa. \\ 
+Como em nosso grupo haviam usuários de Mac OS e de Linux, fizemos um Makefile que detecta em conta o sistema operacional e compila de acordo.\\
+Incluímos três flags para importar as bibliotecas do Allegro. \\ \\
+Para compilar, utilize o Makefile com: 
+\\
+\indent $>\,make$ \\ \\
+Para excluir os arquivos .o:
+\\
+\indent $>\,make\,clear$ \\ \\ 
+Para executar uma entrada de teste pré-definida:
+\\
+\indent $>\,make\,test$
+
+
+\section{Testes}
+Criamos uma pasta "Samples" que contém diversos casos de testes distindos e verificamos, para cada um deles, se houve qualquer vazamento de memória com o Valgrind \\
+Para usar o Valgrind: 
+\\ \\
+\indent $>\,valgrind\,--leak-check=yes\,--track-origins=yes\,./Spacewar\,50000\,<\,Teste.txt$
+
+\section{Considerações Finais}
+
+\end{document}\documentclass{article}
+\usepackage[utf8]{inputenc}
+
+\title{Relatório - Fase II}
+\author{
+    Germano Huning Neuenfeld 9298340
+    \\
+    Lucas Moreira Santos 9345064
+    \\
+    Victor Wichmann Raposo 9298020
+}
 \date{Março 2016}
 
 \begin{document}
