--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -60,7 +60,7 @@ A cada interação zeramos os vetores de força de todos os corpos e depois apli
 Assumimos que, para o dt dado, o movimento dos corpos é um movimento uniformemente variado. A partir disso calculamos o espaço e a velocidade dos corpos em relação ao eixo x e ao eixo y;
 
 \subsubsection{Toróide}
-A implementação do toróide não interfere na modelagem. // TO DO
+A implementação do toróide não interfere na modelagem. // TO DO: falta falar q o toroide é só nas posicoes só o teleporte
 
 \subsection{Visão}
 O framework que usamos para o jogo foi o Allegro que utiliza por trás o OpenGL. Escolhemos essa engine por alguns motivos: \\
