--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -135,5 +135,6 @@ Em geral, achamos a Allegro uma implementação boa e eficiente da parte gráfic
 funções desta biblioteca que é possível arrumar. \\
 \\
 Para essa fase retiramos a entrada de informações pela entrada padrão, as informações necessárias atribuimos no próprio código.
-
+\\
+Fizemos uma mudança na tecla que fazem as nave atirarem, a da nave controlada pelas teclas WAD é: "TAB"; e a da nave controlada pelas setas é: ",".
 \end{document}
